fix: select do not support overflow

--- a/packages/debug/src/browser/view/debug-configuration.module.less
+++ b/packages/debug/src/browser/view/debug-configuration.module.less
@@ -8,7 +8,6 @@
   margin-bottom: 8px;
   justify-content: flex-start;
   pointer-events: all;
-  overflow: auto;
 
   .kt_debug_actions {
     display: flex;
